--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </head>
   <body class="container">
       <header class="jumbotron text-center">
-          <h1 class="display-3"><i class="fab fa-free-code-camp"></i>Hot Restaurant</h1>
+          <h1><i class="fab fa-free-code-camp"></i>Hot Restaurant</h1>
           <hr>
-          <h6>Seize, Please hold.</h6>
+          <h2>Seize, Please hold.</h2>
           <br>
 
           <div>
-                <a class="btn btn-lg btn-primary" href="/tables" role="button"><i class="far fa-list-alt"></i> View Tables</a>
+                <a class="btn btn-lg btn-info" href="/tables" role="button"><i class="far fa-list-alt"></i> View Tables</a>
 
                 <a class="btn btn-lg btn-danger" href="/reserve" role="button"><i class="fas fa-credit-card"></i> Make Reservation</a>
                 </div>
