--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Class Act</title>
   </head>
   <body class="container">
-      <header class="jumbotron text-center">
-          <h1><i class="fab fa-free-code-camp"></i>Hot Restaurant</h1>
+      <header class="jumbotron text-center mt-4">
+          <h1 class="display-3"><i class="fab fa-free-code-camp"></i>Hot Restaurant</h1>
           <hr>
           <h2>Seize, Please hold.</h2>
           <br>
@@ -27,7 +27,7 @@
 
         <footer>
             <p>
-            <p>API Table Link  |  API Wait List</p>
+            <p><a href="#" id="clear">Clear Table</a> | <a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
         </footer>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
