--- a/reserve.html
+++ b/reserve.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -10,7 +11,7 @@
     <title>Class Act</title>
   </head>
   <body class="container">
-      <header class="jumbotron text-center mt-4">
+      <header class="jumbotron text-center mt-4 animated fadeInDown delay-1s">
           <h1 class="display-3"><i class="fab fa-free-code-camp"></i>Hot Restaurant</h1>
           <hr>
           <h2>Seize, Please hold.</h2>
@@ -23,7 +24,7 @@
     
         </header>
 
-        <div class="row">
+        <div class="row animated fadeInUp delay-2s">
                 <div class="col-lg-12">
                     <div class="card train-border">
                         <div class="card-header h4">
